fix: map z-index

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -476,6 +476,8 @@ main {
 }
 
 #map {
+  z-index: 1;
+
   .popupContent {
     margin-bottom: 20px;
     text-align: center;
