--- a/css/index.css
+++ b/css/index.css
@@ -648,6 +648,9 @@ main .contentWrap {
   }
 }
 
+#map {
+  z-index: 1;
+}
 #map .popupContent {
   margin-bottom: 20px;
   text-align: center;
